# blam-tags

./: README.md
.github/workflows/: ci.yml  release.yml
blam-tag-shell/: Cargo.toml  README.md
blam-tag-shell/src/: main.rs
blam-tag-shell/src/commands/: extract_geometry.rs  extract_import_info.rs  mod.rs
blam-tags/: README.md
blam-tags/examples/: decal_overlap_sweep.rs  dump_bsp_instance.rs  dump_camera_fx.rs  dump_collision_bsp.rs  dump_effect_globals.rs  dump_effect_globals_fields.rs  dump_emitter_fields.rs  dump_lightmap_clusters.rs  dump_lightmap_compress.rs  dump_lightmap_pngs.rs  dump_material_effects.rs  dump_model_flags.rs  dump_nearby_placements.rs  dump_object_def_flags.rs  dump_particle.rs  dump_particle_physics.rs  dump_placement_airprobe.rs  dump_render_method.rs  dump_rmsh_envparams.rs  dump_shield_impact.rs  dump_shield_impact_fields.rs  dump_water_func.rs  instance_placements_sweep.rs  verify_emitter_p3.rs
blam-tags/src/: api.rs  ass.rs  camera_fx_settings.rs  chocolate_mountain.rs  decal_system.rs  decorator_set.rs  effect.rs  effect_globals.rs  geometry.rs  jms.rs  lens_flare.rs  lib.rs  material_effects.rs  math.rs  object.rs  particle.rs  particle_physics.rs  paths.rs  render_model.rs  shield_impact.rs  structure_lighting_info.rs  wind.rs
blam-tags/src/animation/: codec.rs
blam-tags/src/bitmap/: decode.rs
blam-tags/src/render_method/: bake.rs  cbuffer.rs  mod.rs  types.rs  walker.rs
blam-tags/src/scenario/: types.rs
blam-tags/src/structure_bsp/: mod.rs  (+1 more)
blam-tags/tests/: bake_against_tagtool.rs
examples/: dump_skydome_color.rs
(+4 files in other folders)
