[package]
name = "blam-tag-shell"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "blam-tag-shell"
path = "src/main.rs"

[dependencies]
blam-tags = { path = "../blam-tags" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1"
rayon = "1"
rustyline = "14"
shlex = "1"
dirs = "5"
flate2 = "1"
